Fix some spacing in team profiles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -668,6 +668,14 @@ p.lead-sm {
 	font-size: 16px;
 }
 
+.strip-left {
+	padding-left: 0px;
+}
+
+.strip-right {
+	padding-right: 0px;
+}
+
 hr {
    border-color: #ddd !important;
    margin-top: 0 !important;
